--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3 class="title">Bangladesh 2.0</h3>
                 <p class="hedar-discription">Idea , innovation ,
                     vision and challenges in New Bangladesh.</p>
-                <button class="btn-1">Explore New Bangladesh</button>
+                <button class="btn-2">Explore New Bangladesh</button>
             </div>
             
             <img width="475px" src="assets/hero.png" alt="">
@@ -25,6 +25,34 @@
 
     </header>
     <main>
+        <section>
+            <h1 class="section-title">The Vision of Future</h1>
+            <p class="sectio-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision-container">
+                <div class="vision-contant-1">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Digital Transformation</h4>
+                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-3">Learn More</button>
+                </div>
+                <div class=" vision-contant-2">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Green Energy</h4>
+                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-4">Learn More</button>
+                </div>
+                <div class="vision-contant-3">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title">Modern Infrastructure</h4>
+                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness</p>
+                    <button class="btn-5">Learn More</button>
+                </div>
+                
+
+
+
+            </div>
+        </section>
 
     </main>
     <footer>
